--- a/config/config.go.example
+++ b/config/config.go.example
@@ -2,9 +2,9 @@ package config
 
 const (
 	ServerPort string = "8080"
-	DBHost     string = "192.168.3.3"
+	DBHost     string = "localhost"
 	DBPort     string = "3306"
 	DBName     string = "go_wiki"
 	DBUser     string = "go_wiki"
-	DBPass     string = "example_password"
+	DBPass     string = "example_passwd"
 )
