--- a/config/config.go.example
+++ b/config/config.go.example
@@ -1,5 +1,7 @@
 package config
 
+import "go-wiki/utils"
+
 const (
 	ServerPort string = "8080"
 	DBHost     string = "localhost"
@@ -7,4 +9,7 @@ const (
 	DBName     string = "go_wiki"
 	DBUser     string = "go_wiki"
 	DBPass     string = "example_passwd"
+	DisplayLog bool   = true
+	LogLevel   int    = utils.Level_Debug
+	LogFile    string = "log"
 )
