--- a/config/config.go.example
+++ b/config/config.go.example
@@ -14,4 +14,5 @@ const (
 	LogLevel   int    = utils.Level_Debug
 	LogFile    string = "log"
 	SessionKey string = "sample"
+	EnableRegister bool = false
 )
