匿名編集の設定項目を追加

--- a/config/config.go.example
+++ b/config/config.go.example
@@ -15,4 +15,5 @@ const (
 	LogFile    string = "log"
 	SessionKey string = "sample"
 	EnableRegister bool = false
+	EnableAnonymousEdit bool = false
 )
