--- a/config/config.go.example
+++ b/config/config.go.example
@@ -3,6 +3,7 @@ package config
 import "go-wiki/utils"
 
 const (
+	GowikiPath string = "/var/www/go-wiki"
 	SiteTitle  string = "Go-Wiki"
 	ServerPort string = "8080"
 	DBHost     string = "localhost"
